--- a/System_programs/UNO_bootloader_for_hex&text_16M/Hex_verification_part_2/makefile
+++ b/System_programs/UNO_bootloader_for_hex&text_16M/Hex_verification_part_2/makefile
@@ -128,7 +128,7 @@ LDFLAGS = -Wl,-Map=$(TARGET).map,--cref $(PRINTF_LIB) $(MATH_LIB)
 
 #****************bootloader cmds***************/
 
-BOOTSTART = 0x60B0
+BOOTSTART = 0x6230
 LDFLAGS += -Wl,--section-start=.text=$(BOOTSTART)
 
 #*********************************************/
