--- a/System_programs/New_mini_OS_PCB_A_CC_16M/2_Flash_verification/makefile
+++ b/System_programs/New_mini_OS_PCB_A_CC_16M/2_Flash_verification/makefile
@@ -128,7 +128,7 @@ LDFLAGS = -Wl,-Map=$(TARGET).map,--cref $(PRINTF_LIB) $(MATH_LIB)
 
 #****************bootloader cmds***************/
 
-BOOTSTART = 0x5D00
+BOOTSTART = 0x5E00
 LDFLAGS += -Wl,--section-start=.text=$(BOOTSTART)
 
 #*********************************************/
