--- a/System_programs/PCB_A_Mini_OS_I2C_V17_CC/1_UNO_CC_OS/makefile
+++ b/System_programs/PCB_A_Mini_OS_I2C_V17_CC/1_UNO_CC_OS/makefile
@@ -37,7 +37,7 @@ MCU = atmega328
 FORMAT = ihex
 
 # Target file name (without extension).
-TARGET = I2C_V16_1_CC
+TARGET = I2C_V17_CC
 
 
 # List C source files here. (C dependencies are automatically generated.)
