--- a/System_programs/PCB_A_Mini_OS_I2C_V17_CA/1_UNO_CA_OS/makefile
+++ b/System_programs/PCB_A_Mini_OS_I2C_V17_CA/1_UNO_CA_OS/makefile
@@ -37,7 +37,7 @@ MCU = atmega328
 FORMAT = ihex
 
 # Target file name (without extension).
-TARGET = I2C_V16_1_CA
+TARGET = I2C_V17_CA
 
 
 # List C source files here. (C dependencies are automatically generated.)
