--- a/1_System_programs/2_UNO_bootloader_for_hex&text_V6/3_Hex_verification_part_3/makefile
+++ b/1_System_programs/2_UNO_bootloader_for_hex&text_V6/3_Hex_verification_part_3/makefile
@@ -52,7 +52,7 @@ SRC = $(TARGET).c
 # it will preserve the spelling of the filenames, and gcc itself does
 # care about how the name is spelled on its command-line.
 
-ASRC = ../6_Resources\Hex_verification.S
+ASRC = ../6_Resources_UNO\Hex_verification.S
 
 
 # Optimization level, can be [0, 1, 2, 3, s]. 
